@@ -87,7 +87,7 @@ List      resv_list = (List) NULL;
 uint32_t  resv_over_run;
 uint32_t  top_suffix = 0;
 #ifdef HAVE_BG
-uint32_t  cpus_per_bp = 0;
+uint32_t  cnodes_per_bp = 0;
 #endif
 
 static void _advance_time(time_t *res_time, int day_cnt);
@@ -1024,11 +1024,13 @@ static void _pack_resv(slurmctld_resv_t *resv_ptr, Buf buffer,
 	packstr(resv_ptr->licenses,	buffer);
 	packstr(resv_ptr->name,		buffer);
 #ifdef HAVE_BG
-	if (!cpus_per_bp)
-		select_g_alter_node_cnt(SELECT_GET_BP_CPU_CNT, &cpus_per_bp);
+	if (!cnodes_per_bp) {
+		select_g_alter_node_cnt(SELECT_GET_NODE_SCALING,
+					&cnodes_per_bp);
+	}
 	cnode_cnt = resv_ptr->node_cnt;
-	if (cpus_per_bp && !internal)
-		cnode_cnt *= cpus_per_bp;
+	if (cnodes_per_bp && !internal)
+		cnode_cnt *= cnodes_per_bp;
 	pack32(cnode_cnt,	        buffer);
 #else
 	pack32(resv_ptr->node_cnt,	buffer);
@@ -1256,12 +1258,14 @@ extern int create_resv(resv_desc_msg_t *resv_desc_ptr)
 	}
 
 #ifdef HAVE_BG
-	if (!cpus_per_bp)
-		select_g_alter_node_cnt(SELECT_GET_BP_CPU_CNT, &cpus_per_bp);
-	if ((resv_desc_ptr->node_cnt != NO_VAL) && cpus_per_bp) {
+	if (!cnodes_per_bp) {
+		select_g_alter_node_cnt(SELECT_GET_NODE_SCALING,
+					&cnodes_per_bp);
+	}
+	if ((resv_desc_ptr->node_cnt != NO_VAL) && cnodes_per_bp) {
 		/* Convert c-node count to midplane count */
 		resv_desc_ptr->node_cnt = (resv_desc_ptr->node_cnt + 
-					   cpus_per_bp - 1) / cpus_per_bp;
+					   cnodes_per_bp - 1) / cnodes_per_bp;
 	}
 #endif
 
@@ -1604,14 +1608,15 @@ extern int update_resv(resv_desc_msg_t *resv_desc_ptr)
 	}
 	if (resv_desc_ptr->node_cnt != NO_VAL) {
 #ifdef HAVE_BG
-		if (!cpus_per_bp)
-			select_g_alter_node_cnt(SELECT_GET_BP_CPU_CNT,
-						&cpus_per_bp);
-		if (cpus_per_bp) {
+		if (!cnodes_per_bp) {
+			select_g_alter_node_cnt(SELECT_GET_NODE_SCALING,
+						&cnodes_per_bp);
+		}
+		if (cnodes_per_bp) {
 			/* Convert c-node count to midplane count */
 			resv_desc_ptr->node_cnt = (resv_desc_ptr->node_cnt + 
-						   cpus_per_bp - 1) /
-						   cpus_per_bp;
+						   cnodes_per_bp - 1) /
+						   cnodes_per_bp;
 		}
 #endif
 		rc = _resize_resv(resv_ptr, resv_desc_ptr->node_cnt);
